syntax = "proto3";
package pipe;
option java_package = "org.pipeapp.proto";
option java_multiple_files = true;

import "google/protobuf/empty.proto";
import "types.proto";

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  int64 userId = 1;
  Uuid accessToken = 2;
}

service LoginService {
  rpc signUp (LoginRequest) returns (LoginResponse);
  rpc signIn (LoginRequest) returns (LoginResponse);
  rpc signOut (google.protobuf.Empty) returns (google.protobuf.Empty);
}